--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li><a href="index.html">My Portfolio</a></li>
-							<li class="active"><a href="generic.html">Photos</a></li>
+							<li><a href="https://agjignesh.github.io/JigneshAgrawalPorfolio/">My Portfolio</a></li>
+							<li class="active"><a href="https://agjignesh.github.io/JigneshAgrawalPortfolio-Images/">Photos</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.instagram.com/agjignesh/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
